@@ -2,32 +2,35 @@ package entities;
 
 import interface_adapters.IObtainable;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 public class Board {
     ArrayList<ArrayList<IObtainable>> players;
     IObtainable centerGoal;
 
-    public static Map<String, List<Integer>> glackyIndices = Map.of(
-            "player1", List.of(0, 1, 2, 3, 8, 13),
-            "player2", List.of(4, 9, 14, 19, 18, 17),
-            "player3", List.of(24, 23, 22, 21, 16, 11),
-            "player4", List.of(20, 15, 10, 5, 6, 7),
-            "neutral", List.of(12)
-    );
+    public static Map<String, List<Integer>> glackyIndices = new HashMap<String, List<Integer>>() {{
+        put("player1", Arrays.asList(0, 1, 2, 3, 8, 13));
+        put("player2", Arrays.asList(4, 9, 14, 19, 18, 17));
+        put("player3", Arrays.asList(24, 23, 22, 21, 16, 11));
+        put("player4", Arrays.asList(20, 15, 10, 5, 6, 7));
+        put("neutral", Arrays.asList(12));
+    }};
 
     public Board(List<ArrayList<IObtainable>> players, IObtainable centerGoal) {
         this.players = (ArrayList<ArrayList<IObtainable>>) players;
         this.centerGoal = centerGoal;
     }
 
+    public Board(List<ArrayList<IObtainable>> players) {
+        this.players = (ArrayList<ArrayList<IObtainable>>) players;
+        this.centerGoal = null;
+    }
+
     public String generateBoardJSON() {
         if (players.size() == 4) {
             return generate4PBoard();
         }
-        return null;
+        return generateRGOBoard();
     }
 
     private String generate4PBoard() {
@@ -41,10 +44,19 @@ public class Board {
             }
             playerCount += 1;
         }
-        boardArray[glackyIndices.get("neutral").getFirst()] = centerGoal;
+        boardArray[glackyIndices.get("neutral").get(0)] = centerGoal;
 
         for (int i = 0; i < 25; i++) {
             sb.append("{ \"name\" : \"").append(boardArray[i].getName()).append("\" }, \n");
+        }
+        sb.replace(sb.length() - 3, sb.length(), "]");
+        return sb.toString();
+    }
+
+    private String generateRGOBoard() {
+        StringBuilder sb = new StringBuilder("[");
+        for (int i = 0; i < 25; i++) {
+            sb.append("{ \"name\" : \"").append(players.get(0).get(i).getName()).append("\" }, \n");
         }
         sb.replace(sb.length() - 3, sb.length(), "]");
         return sb.toString();
